--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -63,10 +63,16 @@
                                     <action selector="showAppPreferences:" target="Voe-Tx-rLC" id="Hjx-Mg-ZIk"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Show Launcher in Status Bar" id="ZUB-Aa-pTP">
+                            <menuItem title="Show in Status Bar" id="ZUB-Aa-pTP">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="toggleShowingStatusItem:" target="Voe-Tx-rLC" id="Xo5-0D-ois"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Hide Window When Inactive" id="rhq-Zn-ud0">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="toggleHideMainWindowWhenInactive:" target="Voe-Tx-rLC" id="DTk-mC-D3V"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="7O0-yG-yjC"/>
@@ -77,9 +83,9 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="bIA-pm-bZk"/>
-                            <menuItem title="Creator’s Thoughts" id="DLI-xQ-gGw">
+                            <menuItem title="More from Burnt Caramel" id="DLI-xQ-gGw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Creator’s Thoughts" id="IDb-BM-AKA"/>
+                                <menu key="submenu" title="More from Burnt Caramel" id="IDb-BM-AKA"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
                             <menuItem title="Services" id="NMo-om-nkz">
