--- a/Blik Mac/Base.lproj/MainMenu.xib
+++ b/Blik Mac/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -26,15 +26,9 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Blik" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About Blik" id="5kV-Vb-QxS">
+                            <menuItem title="About Blik…" id="jpz-u9-f2i">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Blik’s Haunts" id="jpz-u9-f2i">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Blik’s Haunts" id="3Ke-6A-3cx">
+                                <menu key="submenu" title="About Blik…" id="3Ke-6A-3cx">
                                     <items>
                                         <menuItem title="Twitter…" id="MYi-Mo-VRQ">
                                             <modifierMask key="keyEquivalentModifierMask"/>
@@ -56,6 +50,13 @@
                                         </menuItem>
                                     </items>
                                 </menu>
+                                <connections>
+                                    <action selector="orderFrontStandardAboutPanel:" target="-1" id="BAW-3I-9F3"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Burnt Caramel" id="DLI-xQ-gGw">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Burnt Caramel" id="IDb-BM-AKA"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                             <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW">
@@ -81,11 +82,6 @@
                                 <connections>
                                     <action selector="createSymlinks:" target="-1" id="ipC-P4-mvS"/>
                                 </connections>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="bIA-pm-bZk"/>
-                            <menuItem title="More from Burnt Caramel" id="DLI-xQ-gGw">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="More from Burnt Caramel" id="IDb-BM-AKA"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
                             <menuItem title="Services" id="NMo-om-nkz">
