--- a/Blik Mac/GLAProjectEditPrimaryFoldersViewController.xib
+++ b/Blik Mac/GLAProjectEditPrimaryFoldersViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLAProjectEditPrimaryFoldersViewController">
@@ -23,12 +24,12 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="191"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3bW-HV-eiW">
-                    <rect key="frame" x="172" y="148" width="137" height="23"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3bW-HV-eiW">
+                    <rect key="frame" x="172" y="148" width="132" height="23"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="UEp-w1-nFb"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Select primary folders:" id="Nno-84-tcb">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Select master folders:" id="Nno-84-tcb">
                         <font key="font" size="13" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -42,7 +43,7 @@
                 </customView>
                 <box autoresizesSubviews="NO" title="Box" boxType="custom" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="uxU-pM-Rmk" customClass="GLADividerView">
                     <rect key="frame" x="0.0" y="139" width="480" height="1"/>
-                    <view key="contentView">
+                    <view key="contentView" id="NbE-v9-wz7">
                         <rect key="frame" x="1" y="1" width="478" height="0.0"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
@@ -57,7 +58,7 @@
                 </box>
                 <box autoresizesSubviews="NO" title="Box" boxType="custom" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="jgN-rn-UPv" customClass="GLADividerView">
                     <rect key="frame" x="0.0" y="54" width="480" height="1"/>
-                    <view key="contentView">
+                    <view key="contentView" id="rCs-46-Dxc">
                         <rect key="frame" x="1" y="1" width="478" height="0.0"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
@@ -130,7 +131,7 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnResizing="NO" autosaveColumns="NO" rowHeight="32" viewBased="YES" id="68W-60-bLs">
-                        <rect key="frame" x="0.0" y="0.0" width="252" height="0.0"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="0.0"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <size key="intercellSpacing" width="3" height="2"/>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -149,7 +150,7 @@
                                 </textFieldCell>
                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                 <prototypeCellViews>
-                                    <tableCellView placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="32" id="NZZ-Ux-60D">
+                                    <tableCellView misplaced="YES" placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="32" id="NZZ-Ux-60D">
                                         <rect key="frame" x="1" y="1" width="300" height="27"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
@@ -224,7 +225,7 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="zFF-rR-8NI"/>
-                <menuItem title="Remove from Primary Folders" id="e6P-e4-MgO">
+                <menuItem title="Remove from Master Folders" id="e6P-e4-MgO">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="removeSelectedFoldersFromList:" target="-2" id="Ccv-q0-tWw"/>
@@ -243,12 +244,12 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jdc-YU-pLl">
+                <textField misplaced="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jdc-YU-pLl">
                     <rect key="frame" x="36" y="8" width="214" height="69"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="210" id="B8V-0t-X5e"/>
                     </constraints>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Primary folders are the main master folders that hold the rest of your files and folders." id="fOQ-zs-pEH">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Permit Blik to keep up to date as files within your project change. Choose the top-level folders of your project." id="fOQ-zs-pEH">
                         <font key="font" size="13" name="AvenirNext-MediumItalic"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
